log/build_2024-04-13_00-16-35/bezier_root/stdout_stderr.log
running egg_info
writing ../../build/bezier_root/bezier_root.egg-info/PKG-INFO
writing dependency_links to ../../build/bezier_root/bezier_root.egg-info/dependency_links.txt
writing entry points to ../../build/bezier_root/bezier_root.egg-info/entry_points.txt
writing requirements to ../../build/bezier_root/bezier_root.egg-info/requires.txt
writing top-level names to ../../build/bezier_root/bezier_root.egg-info/top_level.txt
reading manifest file '../../build/bezier_root/bezier_root.egg-info/SOURCES.txt'
writing manifest file '../../build/bezier_root/bezier_root.egg-info/SOURCES.txt'
running build
running build_py
copying bezier_root/bezier.py -> /home/yamashita/Robot_ws/build/bezier_root/build/lib/bezier_root
running install
running install_lib
copying /home/yamashita/Robot_ws/build/bezier_root/build/lib/bezier_root/bezier.py -> /home/yamashita/Robot_ws/install/bezier_root/lib/python3.10/site-packages/bezier_root
byte-compiling /home/yamashita/Robot_ws/install/bezier_root/lib/python3.10/site-packages/bezier_root/bezier.py to bezier.cpython-310.pyc
  File "/home/yamashita/Robot_ws/install/bezier_root/lib/python3.10/site-packages/bezier_root/bezier.py", line 4
    from coordinate_msg/msg import Coordinate
                       ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/yamashita/Robot_ws/install/bezier_root/lib/python3.10/site-packages/bezier_root-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/bezier_root/bezier_root.egg-info to /home/yamashita/Robot_ws/install/bezier_root/lib/python3.10/site-packages/bezier_root-0.0.0-py3.10.egg-info
running install_scripts
writing list of installed files to '/home/yamashita/Robot_ws/build/bezier_root/install.log'
